--- a/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
@@ -28,6 +28,7 @@
             <div class="grid-item">
                 <form action="."
                       method="post"
+                      data-turbo="false"
                       id="releaseNoteForm"
                       enctype="multipart/form-data"
                       data-controller="berichten-beheer"
