--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
@@ -29,7 +29,7 @@
         <h1>Gebruiker aanmaken</h1>
         <div class="grid-container">
             <div class="grid-item">
-                <form action="." method="post">
+                <form action="." method="post" data-turbo-frame="_top">
                     {{ form.non_field_errors }}
                     {% csrf_token %}
                     <fieldset>
