--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
@@ -32,6 +32,7 @@
                 <form action="."
                       method="post"
                       data-controller="externeomschrijvingformulier"
+                      data-turbo="false"
                       enctype="multipart/form-data"
                       id="externeOmschrijvingForm"
                       novalidate>
