--- a/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
@@ -27,6 +27,7 @@
             <div class="grid-item">
                 <form action="."
                       method="post"
+                      data-turbo="false"
                       id="releaseNoteForm"
                       enctype="multipart/form-data"
                       data-controller="berichten-beheer">
