Styling fixes meerdere taken aanmaken

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -62,7 +62,7 @@
                             <ul data-taken-aanmaken--manager-target="geselecteerdeTaaktypesContainer"
                                 class="list__pills">
                             </ul>
-                            <div class="help-block warning hidden"
+                            <div class="help-block error hidden"
                                  data-taken-aanmaken--manager-target="geselecteerdeTakenError">
                                 <p>Je hebt het maximum van 10 taken tegelijkertijd bereikt. Ga naar de volgende stap.</p>
                             </div>
