--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -469,6 +469,7 @@ textarea {
         background-color: transparent;
         cursor: pointer;
         padding: 0.25rem 0.25rem 0 0.25rem;
+        transition: background-color $transition-duration-default $transition-ease-default;
 
         &:focus,
         &:hover {
