CSS-fix focus only visible for keyboard-users

--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -75,7 +75,7 @@
         </script>
     </head>
     <body class="{% block body_class %}{% endblock body_class %}"
-          data-controller="notificaties--manager notificaties--toast-manager focus-trap"
+          data-controller="notificaties--manager notificaties--toast-manager focus-trap utils"
           data-notificaties--manager-snack-overzicht-url-value="{% url 'snack_overzicht_stream' %}"
           data-notificaties--manager-url-value="{{ APP_MERCURE_PUBLIC_URL }}"
           data-notificaties--manager-topic-snack-value="/notificaties/snack/"
