--- a/app/frontend/assets/styles/components/_map.scss
+++ b/app/frontend/assets/styles/components/_map.scss
@@ -250,7 +250,7 @@ button.btn-on-map {
     background-color: $white;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
-    &:focus {
+    &:focus-visible {
         outline-color: transparent !important;
         border: 0;
     }
