--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -47,7 +47,7 @@
         }
 
         &:hover,
-        &:focus {
+        &:focus-visible {
             background-color: $blue-100;
             svg {
                 path {
@@ -111,7 +111,7 @@
         }
 
         &:hover,
-        &:focus,
+        &:focus-visible,
         &.active {
             background-color: $white;
             svg {
