--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -5,13 +5,18 @@
 {% block target %}melding_detail_acties{% endblock target %}
 <!-- djlint:on -->
 {% block content %}
-    {% melding_taken melding as taak_info %}
     <p>
+        <a data-action="modal#openModal" data-modal-content-param="
+            <h1>
+                Hi!!!
+            </h1>
+        ">Modal test action</a>
         {% if perms.authorisatie.taak_aanmaken and taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
             <button type="button"
                     class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
                     data-action="modal#openModal"
-                    data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}">
+                    data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}"
+                    data-modal-css-class-param="modal-dialog--wide modal--multistep-form">
                 <span>Taken aanmaken</span>
             </button>
         {% endif %}
@@ -42,6 +47,7 @@
         {% endif %}
     </p>
     <ul class="list-links padding--bottom">
+        {% melding_taken melding as taak_info %}
         {% if taak_info.open_taken %}
             {% if perms.authorisatie.taak_afronden %}
                 <li>
@@ -119,6 +125,7 @@
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="modal#openModal"
+                            data-modal-css-class-param="modal-dialog--wide"
                             data-modal-action-param="{% url 'locatie_aanpassen' melding.uuid %}">
                         <svg width="18"
                              height="18"
