--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -87,7 +87,7 @@
 
     .section--imageslider & {
         height: 98px;
-        max-width: 0;
+        // max-width: 0;
 
         ul {
             position: absolute;
@@ -144,6 +144,106 @@
             //     background-position: 50% 50%;
             //     background-repeat: no-repeat;
             // }
+        }
+    }
+}
+
+.container__modalImageSlider {
+    padding: 1% 1% 40px;
+    height: calc(100% - 1% - 40px);
+
+    .modal-dialog {
+        max-width: none;
+        width: 98%;
+        height: 98%;
+        margin: 0.5% auto;
+
+        .modal-header {
+            padding: 0;
+            z-index: 10;
+        }
+
+        .modal-body {
+            padding: 1% 1% 40px;
+        }
+
+        .modal-content,
+        .modal-body {
+            height: 100%;
+        }
+    }
+    ul,
+    li,
+    .image {
+        height: 100%;
+    }
+
+    .image {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        background-size: contain;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-color: $gray-tint02;
+        cursor: zoom-in;
+
+        &.fullSize {
+            background-size: cover;
+            cursor: zoom-out;
+        }
+    }
+
+    .image-counter {
+        line-height: 40px;
+    }
+
+    .container__navigate-images {
+        .navigate-images--left,
+        .navigate-images--right {
+            cursor: pointer;
+            position: absolute;
+            width: 80px;
+            height: 80px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+
+            opacity: 1;
+            transition: opacity $transition-duration-default ease-in;
+
+            span {
+                display: block;
+
+                background-color: $black;
+
+                svg {
+                    width: 64px;
+                    height: 64px;
+                    margin: 8px;
+                    path {
+                        fill: $white;
+                    }
+                }
+            }
+
+            &.inactive {
+                opacity: 0;
+                pointer-events: none;
+            }
+        }
+        .navigate-images--left {
+            left: 0;
+            span {
+                svg {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+
+        .navigate-images--right {
+            right: 0;
         }
     }
 }
