--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -68,7 +68,7 @@
                             <span>Maak gebruik van komma's om op meerdere termen te zoeken.
                                 <br>
                                 <br>
-                            Klik op het kruisje om het zoeken te beëindigen en de filters weer te activeren.</span>
+                            Klik op het kruisje om het zoeken te beëindigen.</span>
                         </div>
                     </div>
                     {{ form.q|render_rotterdam_formulier }}
