--- a/app/apps/main/templates/melding/detail/bijlagen.html
+++ b/app/apps/main/templates/melding/detail/bijlagen.html
@@ -3,12 +3,11 @@
 <section class="section--seperated section--imageslider"
          data-controller="image-slider"
          data-image-slider-modal-image-slider-outlet="#modal-image-slider"
-         data-image-slider-modal-outlet="[data-controller*=' modal ']"
          data-image-slider-data-value="{{ bijlagen|json_encode }}">
     <div>
         <div class="container__imageslider"
              data-image-slider-target="imageSliderContainer"
-             data-action="scroll->detail#onScrollSlider">
+             data-action="scroll->image-slider-target#onScrollSlider">
             <ul class="list-clean imageslider"
                 style="width: calc(100% * {{ bijlagen|length }})">
                 {% for bijlage in bijlagen %}
@@ -16,7 +15,7 @@
                         tabindex="0"
                         data-image-slider-target="image"
                         data-image-uuid="{{ bijlage.uuid }}">
-                        <div class="image" style="background-image: url('{{ bijlage.afbeelding_relative_url|mor_core_url }}')" data-detail-target="selectedImage" data-action="click->modal#openModal" data-modal-content-param='
+                        <div class="image" style="background-image: url('{{ bijlage.afbeelding_relative_url|mor_core_url }}')" data-action="click->modal#openModal" data-modal-content-param='
                             {% include "melding/detail/bijlagen_modal_content.html" with bijlage=bijlage only %}
                             ' data-modal-css-class-param="modal-dialog--full">
                             <span>{{ bijlage.label }}</span>
@@ -26,7 +25,7 @@
             </ul>
         </div>
         {% if bijlagen|length > 1 %}
-            <div class="container__thumbs">
+            <div class="container__thumbs" data-image-slider-target="thumbContainer">
                 <ul>
                     {% for bijlage in bijlagen %}
                         <li data-image-slider-target="thumb" data-image-uuid="{{ bijlage.uuid }}">
@@ -46,41 +45,3 @@
     </div>
     {% include "icons/expand.svg" %}
 </section>
-{% if bijlagen|length > 0 %}
-    <section class="section--seperated section--imagelist print-only">
-        <div class="container__details">
-            {% if bijlagen|length > 0 %}
-                <ul class="list-clean">
-                    {% for bijlage in bijlagen %}
-                        <li class="container__image">
-                            <div class="image">
-                                <img src="{{ bijlage.afbeelding_relative_url|mor_core_url }}" alt="" />
-                                <span>Foto van melder</span>
-                            </div>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        </div>
-    </section>
-{% endif %}
-<template id="template_modal_body_images">
-    <div data-controller="modal-image-slider"
-         data-modal-image-slider-data-value="{{ bijlagen|json_encode }}"
-         id="modal-image-slider">
-        <div class="image" data-detail-target="selectedImageModal"></div>
-        <div class="image-counter" data-detail-target="imageCounter"></div>
-        <div class="container__navigate-images">
-            <div class="navigate-images--left inactive"
-                 data-detail-target="navigateImagesLeft"
-                 data-action="click->detail#showPreviousImageInModal">
-                <span aria-label="Bekijk vorige afbeelding">{% include "icons/arrow-right.svg" %}</span>
-            </div>
-            <div class="navigate-images--right inactive"
-                 data-detail-target="navigateImagesRight"
-                 data-action="click->detail#showNextImageInModal">
-                <span aria-label="Bekijk volgende afbeelding">{% include "icons/arrow-right.svg" %}</span>
-            </div>
-        </div>
-    </div>
-</template>
