--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -18,7 +18,10 @@
          data-taken-aanmaken--manager-melding-uuid-value="{{ view.kwargs.id }}"
          data-action="click->taken-aanmaken--manager#showHideSearchResult">
         <div class="modal-header border-bottom">
-            {% comment %} <button type="button" class="btn-close" aria-label="Sluit" data-action="modal#closeModal"></button> {% endcomment %}
+            <button type="button"
+                    class="btn-close"
+                    aria-label="Sluit"
+                    data-action="modal#closeModal"></button>
             <h1>
                 <span>Taken aanmaken</span>
                 <small>Selecteer een of meerdere taken. Opmerkingen kunnen later toegevoegd worden.</small>
