--- a/app/apps/main/templates/locatie/lichtmast.html
+++ b/app/apps/main/templates/locatie/lichtmast.html
@@ -20,5 +20,6 @@
 </dl>
 <div data-map-target="pin"
      data-popup-content="Test content"
+     data-pin-id="lichtmast_{{ view.kwargs.lichtmast_id }}"
      data-lat-lon="{{ lichtmast_data.gps.value|json_encode }}"></div>
 </turbo-frame>
