--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -75,7 +75,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="padding--left" id="melding_detail_header_status">
-                                        {% include "melding/detail/header_status.html" with melding=melding only %}
+                                        {% include "melding/detail/header_status.html" with melding=melding disable_stream=True only %}
                                     </div>
                                 </div>
                             </div>
@@ -374,7 +374,9 @@
                                     {% include "melding/melding_gebruiker_actief.html" %}
                                     <div class="container__actions"
                                          data-detail-target="containerActions"
-                                         id="melding_detail_acties">{% include acties_template %}</div>
+                                         id="melding_detail_acties">
+                                        {% include acties_template with disable_stream=True %}
+                                    </div>
                                     {% if melding.signalen_voor_melding|length > 1 %}
                                         <div class="alert alert--info">
                                             <span>
