--- a/app/apps/main/templates/melding/detail/melding_hervatten.html
+++ b/app/apps/main/templates/melding/detail/melding_hervatten.html
@@ -1,55 +1,48 @@
-{% extends "snippets/turbo_stream_wrapper.html" %}
 {% load rotterdam_formulier_html %}
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 {% load context_template from context_tags %}
-<!-- djlint:off -->
-{% block action %}update{% endblock action %}
-{% block target %}modal_content{% endblock target %}
-<!-- djlint:on -->
-{% block content %}
-    <div class="modal-header">
-        <button type="button"
-                class="btn-close"
-                aria-label="Sluit"
-                data-action="modal#closeModal"></button>
-        <h1>
-            <span>Hervatten</span>
-        </h1>
-        <div class="alert alert--info">
-            <span>
-                <svg width="24"
-                     height="24"
-                     viewBox="0 0 24 24"
-                     fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
-                </svg>
-            </span>
-            <div>Door de melding te hervatten wordt de status gewijzigd naar 'Openstaand'.</div>
+<turbo-stream target="modal_header" action="update">
+<template>
+    <h1>
+        <span>Hervatten</span>
+    </h1>
+    <div class="alert alert--info">
+        <span>
+            <svg width="24"
+                 height="24"
+                 viewBox="0 0 24 24"
+                 fill="none"
+                 xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
+            </svg>
+        </span>
+        <div>Door de melding te hervatten wordt de status gewijzigd naar 'Openstaand'.</div>
+    </div>
+</template>
+</turbo-stream>
+<turbo-stream target="modal_body" action="update">
+<template>
+    <section class="section--seperated" data-testid="detailReporter">
+        <div class="container__details">
+            <form action="{% url 'melding_hervatten' melding.uuid %}"
+                  method="post"
+                  class="form--horizontal"
+                  data-turbo-frame="_top"
+                  id="pauzeerForm"
+                  novalidate>
+                {% csrf_token %}
+                <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
+                <div class="form-row btn-row">
+                    <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
+                        <span>Annuleren</span>
+                    </button>
+                    <button type="submit" class="btn btn-action">
+                        <span>Hervatten</span>
+                    </button>
+                </div>
+            </form>
         </div>
-    </div>
-    <div class="modal-body">
-        <section class="section--seperated" data-testid="detailReporter">
-            <div class="container__details">
-                <form action="{% url 'melding_hervatten' melding.uuid %}"
-                      method="post"
-                      class="form--horizontal"
-                      data-turbo-frame="_top"
-                      id="pauzeerForm"
-                      novalidate>
-                    {% csrf_token %}
-                    <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
-                    <div class="form-row btn-row">
-                        <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
-                            <span>Annuleren</span>
-                        </button>
-                        <button type="submit" class="btn btn-action">
-                            <span>Hervatten</span>
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </section>
-    </div>
-{% endblock content %}
+    </section>
+</template>
+</turbo-stream>
