--- a/app/apps/main/templates/melding/detail/melding_pauzeren.html
+++ b/app/apps/main/templates/melding/detail/melding_pauzeren.html
@@ -1,86 +1,79 @@
-{% extends "snippets/turbo_stream_wrapper.html" %}
 {% load rotterdam_formulier_html %}
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 {% load context_template from context_tags %}
-<!-- djlint:off -->
-{% block action %}update{% endblock action %}
-{% block target %}modal_content{% endblock target %}
-<!-- djlint:on -->
-{% block content %}
-    <div class="modal-header">
-        <button type="button"
-                class="btn-close"
-                aria-label="Sluit"
-                data-action="modal#closeModal"></button>
-        <h1>
-            <span>Melding pauzeren</span>
-        </h1>
-        {% if not actieve_taken %}
-            <div class="alert alert--info">
-                <span>
-                    <svg width="24"
-                         height="24"
-                         viewBox="0 0 24 24"
-                         fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
-                    </svg>
-                </span>
-                <div>Geef de melding deze status als er meer informatie nodig is voordat er een taak kan worden gestart.</div>
-            </div>
-        {% endif %}
-    </div>
-    <div class="modal-body">
-        <section class="section--seperated" data-testid="detailReporter">
-            <div class="container__details">
-                {% if actieve_taken %}
-                    <div class="alert alert--warning">
-                        <span>
-                            <svg width="32"
-                                 height="32"
-                                 viewBox="0 0 32 32"
-                                 fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600" />
-                            </svg>
-                        </span>
-                        <div>
-                            <p>Deze melding kan nog niet gepauzeerd worden, omdat er nog opstaande taken zijn.</p>
-                            Openstaande
-                            {% if actieve_taken|length == 1 %}
-                                taak
-                            {% else %}
-                                taken
-                            {% endif %}
-                            :
-                            <ul>
-                                {% for taak in actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
-                            </ul>
-                        </div>
+<turbo-stream target="modal_header" action="update">
+<template>
+    <h1>
+        <span>Melding pauzeren</span>
+    </h1>
+    {% if not actieve_taken %}
+        <div class="alert alert--info">
+            <span>
+                <svg width="24"
+                     height="24"
+                     viewBox="0 0 24 24"
+                     fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
+                </svg>
+            </span>
+            <div>Geef de melding deze status als er meer informatie nodig is voordat er een taak kan worden gestart.</div>
+        </div>
+    {% endif %}
+</template>
+</turbo-stream>
+<turbo-stream target="modal_body" action="update">
+<template>
+    <section class="section--seperated" data-testid="detailReporter">
+        <div class="container__details">
+            {% if actieve_taken %}
+                <div class="alert alert--warning">
+                    <span>
+                        <svg width="32"
+                             height="32"
+                             viewBox="0 0 32 32"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600" />
+                        </svg>
+                    </span>
+                    <div>
+                        <p>Deze melding kan nog niet gepauzeerd worden, omdat er nog opstaande taken zijn.</p>
+                        Openstaande
+                        {% if actieve_taken|length == 1 %}
+                            taak
+                        {% else %}
+                            taken
+                        {% endif %}
+                        :
+                        <ul>
+                            {% for taak in actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
+                        </ul>
                     </div>
-                {% endif %}
-                <form action="{% url 'melding_pauzeren' melding.uuid %}"
-                      method="post"
-                      class="form--horizontal"
-                      data-turbo-frame="_top"
-                      id="pauzeerForm"
-                      novalidate>
-                    {% csrf_token %}
-                    <div class="form-control__no-border">{{ form.status|render_rotterdam_formulier }}</div>
-                    <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
-                    <div class="form-row btn-row">
-                        <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
-                            <span>Annuleren</span>
-                        </button>
-                        <button type="submit"
-                                class="btn btn-action"
-                                {% if actieve_taken %}disabled{% endif %}>
-                            <span>Pauzeren</span>
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </section>
-    </div>
-{% endblock content %}
+                </div>
+            {% endif %}
+            <form action="{% url 'melding_pauzeren' melding.uuid %}"
+                  method="post"
+                  class="form--horizontal"
+                  data-turbo-frame="_top"
+                  id="pauzeerForm"
+                  novalidate>
+                {% csrf_token %}
+                <div class="form-control__no-border">{{ form.status|render_rotterdam_formulier }}</div>
+                <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
+                <div class="form-row btn-row">
+                    <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
+                        <span>Annuleren</span>
+                    </button>
+                    <button type="submit"
+                            class="btn btn-action"
+                            {% if actieve_taken %}disabled{% endif %}>
+                        <span>Pauzeren</span>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </section>
+</template>
+</turbo-stream>
